--- a/cfg/train/BirdCLEF.yaml
+++ b/cfg/train/BirdCLEF.yaml
@@ -2,7 +2,9 @@ mode: !!str 'train'
 wall: !!bool False
 seed: &seed !!int 42
 experiment_name: &experiment_name Test
+# version: &version 0
 resume_path: null
+no_logging: False
 
 logger_params:
   project: !!str 'BirdCLEF2023'
@@ -18,6 +20,8 @@ trainer_params:
   num_sanity_val_steps: !!int 1
   max_epochs: 100
   precision: 16
+  limit_train_batches: 1.0
+  limit_val_batches: 1.0
 trainer_callbacks: [
   {
     callback: pytorch_lightning.callbacks.early_stopping.EarlyStopping,
@@ -86,7 +90,8 @@ lightning_module_params:
 datamodule_params:
   dataset: dataset.dataset.BirdCLEFDataset
   dataset_params:
-    data_folder: input/birdclef-2023/train_audio
+    csv_path: input/birdclef-2023/new_train_metadata.csv
+    audio_folder: input/birdclef-2023/train_audio
     wav_crop_len: *wav_crop_len
     sample_rate: *sample_rate
     albumentations: null
@@ -100,7 +105,6 @@ datamodule_params:
     sampler: null
   train_dataloader_params:
     batch_size: !!int 32
-    drop_last: !!bool True
     shuffle: !!bool True
   val_dataloader_params:
     batch_size: !!int 8
